--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,9 +9,5 @@
   "parserOptions": {
     "ecmaVersion": "latest"
   },
-  "rules": {
-    // "no-console": "off",
-    // "no-unused-vars": "off"
-    "eol" :"lf"
-  }
+  "rules": {}
 }
